manifests/dev/replica-count-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: app-api
