manifests/dev/replica-count-calculator-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-api-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: calculator-api
