manifests/dev/replica-count-info-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-backend-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: info-backend
