manifests/dev/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip
spec:
  type: ClusterIP
  selector:
    app: engine-pods
  ports:
    - port: 50009       # where the service will be accessed by other pods
      targetPort: 8080  # where the app is deployed
