manifests/dev/ingress-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-load-balancer
  namespace: ingress-nginx
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
