manifests/dev/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
spec:
  selector:
    app: api-pods
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
